# gophergpt

./: .env.example  .gitignore  DEMO_README.md  DOCKER_README.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml
autonomy/agent/: planning_exec_agent.py  react_agent.py  simple_agent.py
autonomy/llm/: openai_llm.py
autonomy/tools/: gophergrades_api.py  umn_rooms_tool.py
frontend/: .env.example  README-Frontend-Docker.md  README.md  env.example  frontend.dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  Research.js  index.css
frontend/src/components/: COMPONENTS_README.md  ChatInput.js  ChatWindow.js  GoldyMascot.js  History.js  LoadingIndicator.js  Message.js  MinnesotaMLogo.js  RichContent.js  Sidebar.js
frontend/src/pages/: ChatPage.js  CourseCompare.js  DepartmentExplorer.js  PAGES_README.md  ProfileSettings.js  Research.js
frontend/src/utils/: UTILS_README.md  loadingLabel.js  messageFormatter.js
frontend/streamlit/: frontend.py
gophergpt/autonomy/: prompts.py
gophergpt/autonomy/agent/: base_agent.py  planning_exec_agent.py  react_agent.py  simple_agent.py
gophergpt/autonomy/llm/: base_llm.py  openai_llm.py
scripts/: test_research.py
webservice/: __init__.py  app.py  backend.dockerfile  personalization.py  profile_store.py
webservice/data/: conversations.json  profiles.json
webservice/models/: profile.py
webservice/rag/: chunker.py  embedder.py  indexer.py  retriever.py  vector_store.py
webservice/routers/: difficulty.py  rag.py  research.py
(+9 files in other folders)
